--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1957,7 +1957,7 @@ tab_title_template "{index}: {title.split('/')[-1]}"
 #: New window
 
 # map kitty_mod+enter new_window
-# map cmd+enter       new_window
+map cmd+enter       new_window_with_cwd
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
