--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,19 +18,13 @@ font_size 14.0
 #: }}}
 
 #: Window layout {{{
+enabled_layouts splits
 
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed one above the other
-map f5 launch --location=hsplit
+# horizontal split
+map ctrl+h launch --location=hsplit
 
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed side by side
-map f6 launch --location=vsplit
-
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed side by side if the existing window is wide or
-# one above the other if the existing window is tall.
-map f4 launch --location=split
+# vertical split
+map ctrl+v launch --location=vsplit
 
 
 # Move the active window in the indicated direction
@@ -46,10 +40,10 @@ map ctrl+shift+right layout_action move_to_screen_edge right
 map ctrl+shift+down layout_action move_to_screen_edge bottom
 
 # Switch focus to the neighboring window in the indicated direction
-map ctrl+left neighboring_window left
-map ctrl+right neighboring_window right
-map ctrl+up neighboring_window up
-map ctrl+down neighboring_window down
+map alt+up    neighboring_window up
+map alt+down  neighboring_window down
+map alt+left  neighboring_window left
+map alt+right neighboring_window right
 
 #: }}}
 
