split kitty window in cwd

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -21,10 +21,10 @@ font_size 14.0
 enabled_layouts splits
 
 # horizontal split
-map ctrl+h launch --location=hsplit
+map ctrl+h launch --location=hsplit --cwd=current
 
 # vertical split
-map ctrl+v launch --location=vsplit
+map ctrl+v launch --location=vsplit --cwd=current
 
 
 # Move the active window in the indicated direction
